# patchpilot-dualguard

./: .gitignore  LICENSE  Makefile  README.md  REPORT.md  pyproject.toml  requirements-cloud.txt  requirements-harness.txt
config/: cwe_focus.yaml  eval.yaml  gate.yaml  serve.yaml  train.yaml  train_quick.yaml  versions.yaml  vul4j_dataset.csv  vul4j_eval_ids.txt  vul4j_meta.json
data/: README.md  __init__.py  build_eval_set.py  prepare_sft.py
data/prep/: __init__.py  build_cvefixes_corpus.py  build_eval_set.py  (+3 more)
docs/: MERIT_RUNBOOK.md  RUNBOOK.md  mentor_message.md  plan.md
eval/: __init__.py  baselines.py  build_samples.py  fixer_client.py  judge_client.py  metric.py  metrics.py  quick_eval.py  run_eval.py
harness/: __init__.py  ast_guard.py  diff_utils.py  gate.py  sast.py  verdict.py  vul4j_runner.py  webgate.py
patchpilot_dualguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: eval_base.json  eval_base7.json  eval_base_retry.json  eval_base_retry4.json  eval_finetuned7.json  eval_finetuned_retry.json
scripts/: bootstrap_pod.sh  fix_vul4j.sh  push_to_github.sh  rocm_smi_watch.sh  run_harness_demo.sh  run_smoke.sh  run_webgate_demo.sh  setup_cloud.sh  setup_codeql.sh  setup_eval_env.sh  setup_semgrep.sh  setup_vul4j.sh  validate_pod.sh
serve/: __init__.py  dualguard.py  launch_vllm.sh
serving/: __init__.py  launch_vllm.py  prompts.py
tests/: __init__.py  conftest.py  test_ast_guard.py  test_metric.py  test_sast_parse.py  test_verdict.py  test_webgate.py
train/: __init__.py  build_seed_sft.py  dpo_stub.py  finetune_lora.py  seed_sft.jsonl
training/: __init__.py  data_collator.py  train_lora.py
ui/: dashboard.py
webgate/: axe_scan.mjs  package-lock.json  package.json
(+18 files in other folders)
